# esl-ble

./: CMakeLists.txt  CONTRIBUTING.md  HISTORY  README.md  README.ru.md  ble-helper-win.cpp  ble-helper-win.h  ble-helper.cpp  ble-helper.h  esl-ble.cpp  esl-device-known-types.cpp  esl-device-known-types.h  esl-string-helper-win.cpp  esl-string-helper-win.h  image2srgb8.cpp  image2srgb8.h  nemr-5053-manufacturer-specific-data.cpp  nemr-5053-manufacturer-specific-data.h  platform.h  png2srgb8.cpp  png2srgb8.h  srgb-pack.cpp  srgb-pack.h
tests/: CMakeLists.txt  CTestTestfile.cmake  test-discover.cpp  test-get-size.cpp  test-png.cpp  test-send-figure.cpp  test-specific-data.cpp
